--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,19 @@ margin:auto
   font-weight: bold;
 }
 
+/* Button Styles */
+
+.button{
+  width: 100%;
+  text-align: center;
+  color: rgb(243, 237, 230);
+  padding: 1.5em 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.15) 0%,
+    rgba(0, 0, 0, 0.15) 100%
+  ),
+  radial-gradient(at top center, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 120%)
+    #989898;
+  background-blend-mode: multiply, multiply;
+}
