--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,16 @@
   padding: 0;
   font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
+
+}
+
+body{
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
 
 p {
   font-size: 0.9em;
-  line-height: 1.6em;
+  line-height: 1.3em;
 }
 
 link,
@@ -32,6 +37,7 @@ header {
       #989898;
   background-blend-mode: multiply, multiply;
   color: aqua;
+  height: 87px;
 }
 
 header h1 {
