--- a/src/App.css
+++ b/src/App.css
@@ -231,3 +231,15 @@ input:focus {
   position: absolute;
   top: 10vw;
 }
+
+
+/* different background when button is clicked */
+
+.different-background-profile{
+ background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
+}
+
+.different-background-button{
+  background-image: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
+
+}
